pkg/lang/testdata/ub/constraints/valid/check-exactly-one-of.ub
constraints: [
  { kind: exactly-one-of, fields: [input.a, input.b, input.c] },
]
